# Yuki-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: test_api.py
src/yuki_agent/: agent.py  cli.py  config.py  demo_tool.py  llm.py  memory.py  tools.py
src/yuki_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
