[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yuki-agent"
version = "0.1.0"
description = "A minimal extensible agent template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
yuki-agent = "yuki_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
